<resources>
    <string name="app_name" translatable="false">PutinPhone</string>
    <string name="tex2" translatable="false">Z.O.V</string>
    <string name="button_text">Bomb Kiev</string>
    <string name="Question">Have you decided to desert?</string>
    <string name="edit">Why?</string>
    <string name="editnuke">Code?:</string>
    <string name="NO">NO!</string>
    <string name="YES">Yes!</string>
    <string name="shell">Attacks:</string>
    <string name="good">GOOD</string>
    <string name="mgood">MEGAGOOD</string>
    <string name="toast">Jokes every 50 attacks</string>
    <string name="msg">While you were gone,</string>
    <string name="msg2">has already been restored!</string>
    <string name="msg3">Will have to</string>
    <string name="msg4">bomb again(</string>
    <string name="pp2" translatable="false">PutinPhone2</string>
    <string name="sure">Are you sure?</string>
    <string name="why">So why?</string>
    <string name="ercode">Incorrect code</string>
    <string name="cond">"Condition: "</string>
    <string name="x" translatable="false">X)</string>
    <string name="gena" translatable="false">GENOCIDE</string>
    <string name="q" translatable="false">?</string>
    <string name="ua" translatable="false">UA moment</string>
    <string name="m" translatable="false">M777?</string>
    <string name="n" translatable="false">nuke: 666</string>
    <string name="clo">Clown!</string>
    <string name="piz">O.A.F.</string>
    <string name="faq">Fuck you!</string>
    <string name="ab" translatable="false">Angry birds)</string>
    <string name="rez">Massacre</string>
    <string name="hlop">Claps)</string>
    <string name="l1">To the last</string>
    <string name="l2">Ukrainian</string>
    <string name="str">Strike!</string>
    <string name="hell">Infernal roast</string>
    <string name="ps">Pig strike!!!</string>
    <string name="rr1">Soon the rockets</string>
    <string name="rr2">will fly</string>
    <string name="rr3">for real)</string>
    <string name="rec">Record:</string>
    <string name="newrec">New record!</string>
    <string name="chose">Choose a city</string>
    <string name="Lviv">Lviv</string>
    <string name="Kyiv">Kyiv</string>
    <string name="apl">Applied!</string>
    <string name="bomb">Bomb</string>
    <string name="Sumy">Sumy</string>
    <string name="Rovno">Rovno</string>
    <string name="Lutsk">Lutsk</string>
    <string name="Dnipro">Dnipro</string>
    <string name="nocomm">NO comments</string>
    <string name="Odessa">Odessa</string>
    <string name="description_image">Ka-boom</string>
    <string name="description_home">Home</string>
    <string name="description_list">List of cities</string>
    <string name="description_exit">Exiting the application</string>
    <string name="settings">Settings</string>
    <string name="sound">Sounds</string>
    <string name="vibro">Vibration</string>
    <string name="anim">Animations</string>
    <string name="to_support">To support</string>
    <string name="minus_money">*All money is debited*</string>
    <string name="notifications">Notifications</string>
    <string name="Zaporozhye">Zaporozhye</string>
    <string name="Nikolaev">Nikolaev</string>
    <string name="Vinnitsa">Vinnitsa</string>
    <string name="Chernihiv">Chernihiv</string>
    <string name="Poltava">Poltava</string>
    <string name="Zhytomyr">Zhytomyr</string>
    <string name="Kharkov">Kharkov</string>
    <string name="Kremenchug">Kremenchug</string>
    <string name="Ternopil">Ternopil</string>
    <string name="Slavyansk">Slavyansk</string>
    <string name="Kramatorsk">Kramatorsk</string>
    <string name="Khmelnitsky">Khmelnitsky</string>
    <string name="Krivoy_Rog">Krivoy Rog</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="by_population">By population</string>
    <string name="accidentally">Accidentally</string>
    <string name="sad" translatable="false">:\'(</string>
</resources>